# mmviewer

./: README.md  meta.yaml  setup.cfg
mmviewer/: __init__.py  __main__.py  __version__.py  alignment.py  gen_graph.py  get_target.py  utility.py
recipe/: meta.yaml
src/mmviewer/: __init__.py  __version__.py  alignment.py  gen_graph.py  get_target.py
