[metadata]
name = MMViewer
version = attr: mmviewer.__version__.__version__
license = GPLv3
url = https://github.com/KIkebata/mmviewer
author = K. Ikebata
author_email = kikebata623@gmail.com
license_file = LICENSE
description = Missense Mutation Viewer.
long_description = file: README.md
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    mmviewer = mmviewer.__main__:main