[metadata]
name = MMViewer
version = attr: src.mmviewer.__version__.__version__
license = GPLv3
url = https://github.com/KIkebata/mmviewer
author = K. Ikebata
author_email = kikebata623@gmail.com
license_file = LICENSE
description = Missense Mutation Viewer.
long_description = file: README.md
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =src
packages = find:
installl_requires =
    pandas
    joblib
    matplotlib
    pyvcf
    numpy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mmviewer = mmviewer.__main__:main